--- a/plugin.yml
+++ b/plugin.yml
@@ -7,6 +7,7 @@ commands:
   afkzone:
     description: Configure the AFK zone
     usage: /afkzone <setworld|setposition>
+    aliases: [az]
     permission: afkzone.command
 permissions:
   afkzone.command:
