--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,11 @@
 name: AFKZone
 main: Luthfi\AFKZone\Main
-version: 1.0.1
+version: 2.2.0
 api: 5.16.0
 commands:
   afkzone:
     description: Configure the AFKZone
-    usage: /afkzone <setworld|setposition>
+    usage: /afkzone <ui|setworld|setposition>
     aliases: [az]
     permission: afkzone.command
   settopafk:
