--- a/resources/config.yml
+++ b/resources/config.yml
@@ -7,6 +7,4 @@ afk-zone:
   y2: 0
   z2: 0
 reward-amount: 1000
-economy-plugin: "BedrockEconomy" # EconomyAPI or BedrockEconomy
-
-Language: English
+economy-plugin: "PocketEconomy" # EconomyAPI, BedrockEconomy or PocketEconomy
