--- a/.poggit.yml
+++ b/.poggit.yml
@@ -6,4 +6,8 @@ projects:
   AFKZone:
     path: ""
     icon: icon.png
+    libs:
+     - src: jojoe77777/FormAPI/libFormAPI
+       version: ^2.1.0
+       branch: "master"
 ...
