--- a/plugin.yml
+++ b/plugin.yml
@@ -3,6 +3,7 @@ main: Luthfi\AFKZone\Main
 author: Luthfi
 version: 2.3.0
 api: 5.17.0
+depend: ["ScoreHud"]
 commands:
   afkzone:
     description: Configure the AFKZone
