--- a/plugin.yml
+++ b/plugin.yml
@@ -9,7 +9,7 @@ commands:
     description: Configure the AFKZone
     usage: /afkzone <ui|setworld|setposition>
     aliases: [az]
-    permission: afkzone.command
+    permission: afkzone.cmd
   settopafk:
     description: Allow to set leaderboard
     permission: afkzone.settopafk
@@ -17,7 +17,7 @@ commands:
     description: Allow player to see top afk
     permission: afkzone.topafk
 permissions:
-  afkzone.command:
+  afkzone.cmd:
     description: Allows the player to configure the AFKZone
     default: op
   afkzone.settopafk:
