--- a/plugin.yml
+++ b/plugin.yml
@@ -2,8 +2,8 @@ name: AFKZone
 main: Luthfi\AFKZone\Main
 author: Luthfi
 version: 2.3.0
-api: 5.17.0
-depend: ["ScoreHud"]
+api: 5.0.0
+website: https://github.com/LuthMC/AFKZone
 commands:
   afkzone:
     description: Configure the AFKZone
