--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,7 +1,7 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/LuthMC/AFKZone
 build-by-default: true
 branches:
-- main
+- master
 projects:
   AFKZone:
     path: ""
