--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,14 +1,7 @@
 # AFKZone Configuration
 
-# Reward Settings
 rewards:
-  timer: 60
-  money: 100
+  timer: 60 # in seconds
 
-# Reward Items (given when timer expires)
-reward-items:
-  enabled: true
-  amount: 1
-  items:
-    - "diamond"
-    - "gold_ingot"
+prevent-movement:
+  enabled: false
